manifests/recipes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  namespace: recipes
  labels:
    app: recipes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipes
  template:
    metadata:
      labels:
        app: recipes
    spec:
      containers:
        - name: recipes
          image: docker.io/vabene1111/recipes:latest@sha256:7d083f3af3a2a58bb8bb5fe94d59a37e2076bc405cf9bd51c2e3eaa18d6baf5a
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 400Mi
              cpu: 500m
            limits:
              memory: 400Mi
              cpu: 500m
          volumeMounts:
            - name: pvc
              subPath: staticfiles
              mountPath: /opt/recipes/staticfiles
            - name: pvc
              subPath: mediafiles
              mountPath: /opt/recipes/mediafiles
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: recipes-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: recipes
spec:
  selector:
    app: recipes
  ports:
    - protocol: TCP
      port: 8080
