manifests/recipes/psql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: recipes
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: psql
  selector:
    cluster-name: acid-recipes
