manifests/recipes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes
  namespace: recipes
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  tls:
    - hosts:
        - recipes.realliance.net
      secretName: recipes-tls
  rules:
    - host: recipes.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipes
                port:
                  number: 8080
